# streamlit_test

./: pyproject.toml
streamlit_test/: cv-st.py  cvtest.py  test.py
